fixed bug with background color on sign in and sign up pages not covering entire div, fixed bug with user top card info on kanji posts, fixed flexbox for kanji post buttons for mobile users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,6 +156,10 @@ ul {
 
 #kanji-title {
   padding-left: 22px;
+
+  @media screen and (max-width: 800px) {
+    font-size: 28px;
+  }
 }
 
 #under-kanji-title {
